[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/SpaceShooterAssetPack_BackGrounds.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemy1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/Common Fight.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 40.3515, 3, 0, 0, 0, 0, 531, 4 )
}

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource( 2 )
Enemy = ExtResource( 4 )

[node name="BG" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG"]
motion_mirroring = Vector2( 0, 1024 )

[node name="Sprite" type="Sprite" parent="BG/ParallaxLayer"]
position = Vector2( 306.171, 599.342 )
scale = Vector2( 4.71608, 4.71608 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 304, 785 )

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="EnemySpawnPath" type="Path2D" parent="."]
position = Vector2( 22.3467, 0 )
scale = Vector2( 0.957916, 1 )
curve = SubResource( 1 )

[node name="EnemySpawn" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2( 40.3515, 3 )
rotation = 0.00203802

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="game_over" from="HUD" to="." method="_on_HUD_game_over"]
[connection signal="use_move_vector" from="HUD" to="Player" method="_on_HUD_use_move_vector"]
[connection signal="tree_exiting" from="Player" to="HUD" method="_on_Player_tree_exiting"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
